# crmux

./: CHANGELOG.md  Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
demos/: record.sh
src/: app.rs  auto_title.rs  event_handler.rs  layout.rs  main.rs  mcp.rs  rpc.rs  socket.rs  state.rs  tmux_ops.rs  ui.rs  update.rs
