[package]
name = "crmux"
version = "0.1.0"
edition = "2024"
authors = ["maedana"]
description = "A TUI viewer for Claude Code sessions in tmux"
license = "MIT"

[[bin]]
name = "crmux"
path = "src/main.rs"

[dependencies]
ratatui = { version = "0.30", features = ["crossterm_0_28"] }
crossterm = "0.28"
tmux-claude-state = "0.1.1"
ansi-to-tui = "8"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
