[package]
name = "crmux"
version = "0.1.0"
edition = "2024"
authors = ["maedana"]
description = "A TUI viewer for Claude Code sessions in tmux"
license = "MIT"
repository = "https://github.com/maedana/crmux"

[[bin]]
name = "crmux"
path = "src/main.rs"

[dependencies]
ratatui = { version = "0.30", features = ["crossterm_0_28"] }
crossterm = "0.28"
tmux-claude-state = "0.1.1"
ansi-to-tui = "8"
clap = { version = "4.5.60", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
