[package]
name = "crmux"
version = "0.11.0"
edition = "2024"
authors = ["maedana"]
description = "A TUI viewer for Claude Code sessions in tmux"
license = "MIT"
repository = "https://github.com/maedana/crmux"
keywords = ["tmux", "tui", "claude", "session", "multiplexer"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "crmux"
path = "src/main.rs"

[dependencies]
ratatui = { version = "0.30", features = ["crossterm_0_28"] }
crossterm = "0.28"
tmux-claude-state = "0.3.0"
ansi-to-tui = "8"
clap = { version = "4.5.60", features = ["derive"] }
libc = "0.2"
rmp = "0.8"
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-width = "0.2"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[dev-dependencies]
tempfile = "3.26.0"
